--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
                             Laptop Mới
                         </span>
                     </a>
-                    <a href="./page/LikeNewLaptop.html" class="nav-parents">
+                    <a asp-controller="Product" asp-action = "Index" asp-route-status="Like New" class="nav-parents">
                         <div class="img">
                             <img src="https://laptopaz.vn/media/category/cb_e90d157ceaa8bd152905d6b420c3bd29.png" alt="">
                         </div>
