--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -1,1 +1,18 @@
-<h1>index</h1>
+
+@section Styles {
+    <link rel="stylesheet" type="text/css" href="~/css/cart.css">
+}
+
+<div class="body">
+    <div class="contentApp">
+
+                <div class="route">
+                    <div><i class="fa-solid fa-house"></i></div>
+                    <div>/</div>
+                    <div>Đơn hàng</div>
+
+                </div>
+                
+
+    </div>
+</div>
