--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://cdn.tailwindcss.com"></script>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="~/css/detail.css">
@@ -33,9 +35,9 @@
     <div id="app">
         <div class="header">
             <div class="header-top">
-                <div class="logo">
-                    <img src="~/img/laptopneon2.png" alt="">
-                </div>
+                <a href="/" class="logo">
+                    <img src="/img/laptopneon2.png" alt="">
+                </a>
 
                 <div class="search ">
                     <div class="container mt-3">
@@ -57,7 +59,7 @@
                 <div class="box-right">
                     <div class="hotline">
                         <img src="./img/icon-phone.gif" alt="">
-                        <span>0386640397</span>
+                        <span class="">0386640397</span>
                     </div>
     
                     <a  asp-action="Index" asp-controller="Cart" class="cart">
@@ -70,7 +72,8 @@
                     </a>
     
                     @if(!string.IsNullOrEmpty(user?.Name)){
-                        <div class="account">
+                       
+                        <a asp-action="Index" asp-controller="Profile" class="account">
                         <span>
                             @(user?.Name ?? "Đăng Nhập")
                         </span>
@@ -78,11 +81,11 @@
                             <i class="fa-solid fa-user"></i>
                         </div>
 
-                        <div class="box-action">
+                        @* <div class="box-action">
                             <div class="account-action">
                                 
                                 <div class="">
-                                    <a href="./page/UserOrder.html" class="my-order">
+                                    <a href="/Order" class="my-order">
                                         <i class="fa-solid fa-cart-shopping"></i>
                                         Đơn hàng của tôi
                                     </a>
@@ -95,9 +98,9 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
+                        </div> *@
 
-                    </div>
+                    </a>
                     }else{
                         <a href="/login" class="login">
                         <span>
@@ -262,6 +265,7 @@
     
     @* <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+     @* <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> *@
     <script src="~/js/index.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
