--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li class="mt-2">
-                    <a href="">
+                    <a asp-action="Index" asp-controller="Usermanage">
                         <i class="fa-solid fa-user-group"></i>
                         Quản Lý Người Dùng
                     </a>
